# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import teamRouter from "./team";
 import casesRouter from "./cases";
 import technologiesRouter from "./technologies";
 import statsRouter from "./stats";
+import settingsRouter from "./settings";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use("/team", teamRouter);
 router.use("/cases", casesRouter);
 router.use("/technologies", technologiesRouter);
 router.use("/stats", statsRouter);
+router.use("/settings", settingsRouter);
 
 export default router;
